<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="@dimen/fab_margin">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="CADASTRO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nome:" />

        <EditText
            android:id="@+id/edt_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Digite seu nome"
            android:textSize="8pt"
            android:textStyle="italic" />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Data/Nasc:" />

        <EditText
            android:id="@+id/edt_nascimeno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textStyle="italic"
            android:textSize="8pt"
            android:inputType="date" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sexo:"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbtn_F"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Feminino"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rbtn_M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Masculino" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="E-mail:"/>

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Digite seu e-mail"
            android:textSize="8pt"
            android:textStyle="italic" />
        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login:" />

        <EditText
            android:id="@+id/edt_login_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="8pt"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Senha:" />

        <EditText
            android:id="@+id/edt_senha_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Digite a  senha"
            android:password="true"
            android:textSize="8pt"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <EditText
            android:id="@+id/edt_senha_confirma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Confimar senha"
            android:password="true"
            android:textSize="8pt"
            android:textStyle="italic" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="DIAGNÓSTICO(S):"/>


    <TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:layout_weight="1">

    |<TableRow>

        <CheckBox
            android:id="@+id/checkbox_diabetes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/check_d1" />

        <CheckBox
            android:id="@+id/checkbox_hipertensao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/check_d5" />

</TableRow>

        |<TableRow>

        <CheckBox
            android:id="@+id/checkbox_osteoporose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/check_d2" />

        <CheckBox
            android:id="@+id/checkbox_parkinson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/check_d6" />



    </TableRow>

        |<TableRow>

        <CheckBox
            android:id="@+id/checkbox_alzheimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/check_d3" />

        <CheckBox
            android:id="@+id/checkbox_asma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/check_d7" />

    </TableRow>

        |<TableRow>

        <CheckBox
            android:id="@+id/checkbox_depressao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/check_d4" />

        <CheckBox
            android:id="@+id/checkbox_gastrite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/check_d8" />

    </TableRow>
</TableLayout>

    <Button
        android:id="@+id/button_salvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Salvar"/>



</LinearLayout>